fix: change z-index

--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -97,6 +97,7 @@ nz-carousel {
         border-top: 1px solid @border-color-base;
         border-left: inherit !important;
         position: inherit !important;
+        z-index: 98;
     }
 
     .part-1 {
