--- a/src/app/components/menu/menu.component.less
+++ b/src/app/components/menu/menu.component.less
@@ -7,7 +7,7 @@
     border-radius: 80px;
     box-shadow: 0 0 30px rgb(0 0 0 / 8%);
     border: inherit;
-    z-index: 999;
+    z-index: 99;
 }
 
 .logo {
